--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
     </div>
     <div id='Tools'>
       Keyboard controls:<br>
-      I: Choose icon<br>
+      <!-- I: Choose icon<br> -->
     </div>
   </div >
   <form action="">
     <input id="m" autocomplete="off"
-      placeholder="use the 'Enter' key or 'Send' button to send your message" /><button>Send</button>
+      placeholder="Type here and use the 'Enter' key or 'Send' button to send your message." /><button>Send</button>
   </form>
 </body>
 
