--- a/index.html
+++ b/index.html
@@ -131,8 +131,11 @@
     $(function () {
       $('form').submit(function (e) {
         e.preventDefault(); // prevents page reloading
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
+        var msg = $('#m').val().trim();
+        if (msg.length > 0 ){
+          socket.emit('chat message', msg);
+          $('#m').val('');
+        }
         return false;
       });
       socket.on('chat message', function (msg) {
