--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Socket.IO chat</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <base href='\' />
+  <!-- <link rel='stylesheet' type="text/css" href="style.css"> -->
   <style>
   </style>
 </head>
@@ -11,7 +12,105 @@
 <!-- <script src="/moment.js"></script> -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+  }
 
+  body {
+    font: 13px Consolas, Arial;
+    color: navy;
+  }
+
+  form {
+    padding: 3px;
+    margin: 5px;
+    bottom: 0;
+    width: 90vw;
+    margin-top: 5px;
+  }
+
+  form input {
+    border: 1px solid black;
+    padding: 10px;
+    width: 75vw;
+    /* margin-right: .5%; */
+  }
+
+  form button {
+    width: 9%;
+    background: rgb(130, 224, 255);
+    border: 1px solid black;
+    padding: 10px;
+    margin: 5px;
+  }
+
+  #Messages {
+    width: 70vw;
+    height: 85vh;
+    background-color: white;
+  }
+
+  #Users {
+    width: 15vw;
+    background: rgb(130, 224, 255);
+    margin-right: 1vw;
+  }
+
+  #Tools {
+    width: 14vw;
+    background-color: lightyellow;
+    margin-right: .5vw;
+  }
+
+  #Messages,
+  #Users,
+  #Tools {
+    overflow: auto;
+    margin: .5vw;
+    padding: .5vw;
+    border: 1px solid black;
+  }
+
+  #Messages,
+  #Users,
+  #Tools {
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+
+  #messages {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 85vh;
+  }
+
+  #users {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  #messages li {
+    padding: 2px 2px;
+  }
+
+  #messages li:nth-child(odd) {
+    background: #eee;
+  }
+
+  #container {
+    width: 95vw;
+    display: flex;
+  }
+
+  #first {
+    display: none;
+  }
+</style>
 
 <body onload='logIn()'>
   <script>
@@ -34,7 +133,7 @@
       $('form').submit(function (e) {
         e.preventDefault(); // prevents page reloading
         var msg = $('#m').val().trim();
-        if (msg.length > 0 ){
+        if (msg.length > 0) {
           socket.emit('chat message', msg);
           $('#m').val('');
         }
@@ -70,7 +169,7 @@
 
     var hourOffset = -1;
     function timeString(dat) {
-      if (dat === undefined){return '';}
+      if (dat === undefined) { return ''; }
       //var d = new Date(dat);
       //d.setHours(d.getHours + hourOffset);
       //var t = d.toISOString().substr(11, 8);
