--- a/test.html
+++ b/test.html
@@ -18,9 +18,8 @@
             var start = 128511, s = '', del = '';
             for (i = 1; i < 81; i++) {
                 var d = start + i;
-
-                if (i > 0 && i % 5 == 0) { del = '<br>' }
-                s += '<span onCLick="insertEmoji(this)" style="cursor: pointer">' + '&#x' + d.toString(16) + '</span>' + del;
+                if (i % 6 == 0) { del = '<br>' }
+                s += '<span onCLick="insertEmoji(this)" style="cursor: pointer">' + '&#x' + d.toString(16) + ';</span>' + del;
                 del = '';
             }
             return s;
